--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     --secondary-color: #3C2A21;
     --secondary-color-1: #3c2a2175;
     --tertiary-color: #1A120B;
+    --tertiary-color-1: #1a120b32;
 }
 
 body {
@@ -20,8 +21,6 @@ body {
 .btn-1 {
     background-color: black;
     color: var(--primary-color);
-    border: 3px solid var(--secondary-color);
-    border-radius: 5px;
     padding: 10px 20px;
     text-decoration: none;
     font-size: 16px;
@@ -34,7 +33,8 @@ body {
 .btn-2 {
     background-color: var(--primary-color);
     color: var(--tertiary-color);
-    border: 3px solid var(--tertiary-color);
+    border: 1px solid var(--tertiary-color);
+    height: 46px;
     border-radius: 5px;
     padding: 10px 20px;
     text-decoration: none;
