--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,7 @@
+.padded {
+    padding: 90px 0px 20px;
+}
+
 .hero {
     padding: 70px;
     height: 70vh;
@@ -12,22 +16,28 @@
 }
 
 #divider-1 {
-    background: url('../assets/right-angle.svg');
-    background-size: contain;
+    height: 300px;
+    display: block;
+    background-color: var(--tertiary-color);
+    background-image:
+        url("../assets/triangle.svg");
     background-repeat: no-repeat;
-    height: 20px;
+    background-size: cover;
+    background-position: bottom center, 50%, 50%;
+    height: 20vh;
 }
 
 .home .fields {
+    padding-top: 100px;
     min-height: 70vh;
-    background-color: var(--tertiary-color);
+    background-color: var(--primary-color-1);
     overflow-x: hidden;
 }
 
 .field-header {
     text-align: center;
     margin: 60px 0px 0px;
-    color: var(--primary-color);
+    color: var(--tertiary-color);
 }
 
 .field-header h3 {
@@ -36,9 +46,16 @@
     letter-spacing: 1.3px;
 }
 
+#fields-title {
+    color: var(--tertiary-color);
+    font-weight: 900;
+    letter-spacing: 1.3px;
+    margin: 0px 0px 30px;
+}
+
 .fields .single-field {
     max-width: 500px;
-    color: var(--primary-color-1);
+    color: var(--tertiary-color);
     margin: 60px 20px;
 }
 
@@ -54,26 +71,57 @@
     font-weight: 200;
 }
 
+
+
 .about {
-    background-color: var(--primary-color);
     overflow-x: hidden;
     width: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
+    height: 60vh;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .about-stat {
+    color: var(--primary-color-1);
     display: inline-block;
     padding: 50px;
+    height: 300px;
     margin-left: auto;
     margin-right: auto;
-    min-width: fit-content;
-    background-color: var(--tertiary-color-1);
+    margin: 20px;
+    /* min-width: fit-content; */
+    width: 200px;
+    background-color: var(--tertiary-color);
 }
 
+.about-sec {
+    position: relative;
+    background: url("../assets/hammer-1.png");
+    /* background: url("../assets/hammer.jpg"); */
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: 100% auto;
+}
+
+/* .about:after {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    background: url("../assets/hammer.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: 100% auto;
+} */
+
 .about-stat .stat-title {
-    font-size: 2rem;
+    font-size: 3.5rem;
     font-weight: 900;
     letter-spacing: 1.3px;
     margin: 0px 0px 30px;
@@ -83,4 +131,11 @@
     font-size: 1.0rem;
     font-weight: 200;
     letter-spacing: 1.3px;
+}
+
+.about-trusted {
+    padding: 100px 0px 0px;
+    background-color: var(--primary-color-1);
+    overflow-x: hidden;
+    height: 70vh;
 }
