--- a/src/components/TitleStyles.css
+++ b/src/components/TitleStyles.css
@@ -263,6 +263,7 @@ h1 em {
 
     font-size: 26px;
     letter-spacing: 1px;
+    font-weight: 100;
 
     display: grid;
     grid-template-columns: 1fr auto 1fr;
